criação pag sobre

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,18 @@
 /* ==== overwrite bootstrap standard ==== */
 @import url('animate.css');
 
+.tagSobre{
+    margin-top: 10px;
+    border: solid 1px #1bbd36;
+    border-radius: 11px;
+}
 
+@media (max-width: 991px){
+
+  #imgSobre{display: none;}
+  .msgSobre{margin-top: 7%}
+
+}
 
 body {
 	font-family:'Open Sans', Arial, sans-serif;
